cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/urla05239b71c_viniciusinnovatium_mumps2java_api_tgz-pJ8-com_disclinc_netmanager_script_test_ExecTesteNewJ8.txt
../dataset/june2020_dataset_copy/urla05239b71c_viniciusinnovatium_mumps2java_api_tgz-pJ8-com_disclinc_netmanager_script_test_ExecTesteNewJ8/src/br/com/innovatium/mumps2java/dataaccess/DAO.java:22: error: (required.method.not.called) $$ 4 $$ method close $$ ConnectionFactory.getConnection(connectionType) $$ java.sql.Connection $$ regular method exit $$ ( 490, 537 ) $$ @MustCall method close may not have been invoked on ConnectionFactory.getConnection(connectionType) or any of its aliases.
			con = ConnectionFactory.getConnection(connectionType);
			                                     ^
  The type of object is: java.sql.Connection.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/urla05239b71c_viniciusinnovatium_mumps2java_api_tgz-pJ8-com_disclinc_netmanager_script_test_ExecTesteNewJ8/src/com/disclinc/netmanager/function/test/SelectFunctionTest.java:33: warning: non-varargs call of varargs method with inexact argument type for last parameter;
		assertEquals("Fail on select a valid condition", null, $select(null));
		                                                               ^
  cast to BooleanObject for a varargs call
  cast to BooleanObject[] for a non-varargs call and to suppress this warning
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
1 warning
